--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,4 +9,4 @@ edition = "2021"
 serde={version="1", features=["derive"]}
 serde_json="1"
 reqwest="0.11"
-tokio="1"
+tokio={version="1", features=["full"]}
